# vividshift

./: .dockerignore  .env.example  .gitignore  AI_SESSION_PROMPT.md  Cargo.toml  Dockerfile  LICENSE  README.md  assignment_history.json  assignment_history.txt  docker-compose.yml  file_a.txt  file_b.txt  long_term_history.json  names.txt
.github/workflows/: discord.yml  docker.yml  worker.yml
backend/: .dockerignore  Cargo.minimal.toml  Cargo.toml  Dockerfile
backend/.sqlx/: query-0126bea8f5aceda9c21e2cc4bc02184ed802280777f7afb1946abf246320e6a5.json  query-01e50afb3d0d51dbe55e0764916c4ee38f9f787de694315d1587bf7de2b48a6e.json  query-0f323157aed9e7da2a3875e8dadf04924fae9031c725a2d285a3c2cde1a7d945.json  query-17daf698d96a76f20af5ff1c82c6cd6da0d5dc21480bfc5cb09de4a301e1de3c.json  query-18093b2f3a0c87f8cd8955542bccb1051a4a8386af5fe1aa0871b1bc97f90f01.json  (+83 more)
backend/config/: default.toml  dev.toml  (+2 more)
config/: default.toml  people.example.toml  people.toml
data/: .gitkeep
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  PEOPLE_DATA.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USER_MANUAL.md  architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
monitoring/: prometheus.yml
scripts/: backup.sh  init-db.sql  restore.sh  setup.sh
src/: assignment_engine.rs  auth.rs  config.rs  db.rs  discord.rs  files.rs  group.rs  lib.rs  main.rs  models.rs  output.rs  people_config.rs  schema.rs
tests/: config_test.rs  people_config_test.rs
(+84 files in other folders)
