[package]
name = "work_group_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"

[dev-dependencies]
serial_test = "3.2.0"
